@@ -2034,6 +2034,7 @@ is a good idea, but see SB-SYS re. blurring of boundaries.")
            "CODE-INSTRUCTIONS" "CODE-N-UNBOXED-DATA-BYTES"
            "CODE-OBJECT-SIZE" "CODE-TRAILER-REF"
            "COERCE-SYMBOL-TO-FUN"
+           "COERCE-TO-EXTENDED-SEQUENCE"
            "COERCE-TO-FUN" "COERCE-TO-LEXENV" "COERCE-TO-LIST"
            "COERCE-TO-VALUES" "COERCE-TO-VECTOR"
            "COMPLEX-DOUBLE-FLOAT" "COMPLEX-DOUBLE-FLOAT-P"
