@@ -161,3 +161,86 @@
       (let ((position (read-sequence sequence stream :start 1 :end 3)))
         (assert (eql 3 position))
         (assert (equal '(#\a #\w #\x #\d) (coerce sequence 'list)))))))
+
+;;; example code from "User-extensible sequences in Common Lisp"
+;;; (Rhodes, 2007)
+
+(defclass queue (sequence standard-object)
+  ((%data :accessor %queue-data) (%pointer :accessor %queue-pointer)))
+(defmethod initialize-instance :after ((o queue) &key)
+  (let ((head (list nil)))
+    (setf (%queue-data o) head (%queue-pointer o) head)))
+(defgeneric enqueue (data queue)
+  (:argument-precedence-order queue data)
+  (:method (data (o queue))
+    (setf (cdr (%queue-pointer o)) (list data) (%queue-pointer o) (cdr (%queue-pointer o)))
+    o))
+(defgeneric dequeue (queue)
+  (:method ((o queue))
+    (prog1 (cadr (%queue-data o))
+      (setf (cdr (%queue-data o)) (cddr (%queue-data o))))))
+
+(defclass funcallable-queue (queue sb-mop:funcallable-standard-object)
+  ()
+  (:metaclass sb-mop:funcallable-standard-class))
+(defmethod initialize-instance :after ((o funcallable-queue) &key)
+  (flet ((fun (&optional (new nil new-p)) (if new-p (enqueue new o) (dequeue o))))
+    (sb-mop:set-funcallable-instance-function o #'fun)))
+
+(defmethod sequence:length ((o queue)) (length (cdr (%queue-data o))))
+(defmethod sequence:elt ((o queue) index) (elt (cdr (%queue-data o)) index))
+(defmethod (setf sequence:elt) (new-value (o queue) index) (setf (elt (cdr (%queue-data o)) index) new-value))
+(defmethod sequence:make-sequence-like ((o queue) length &key (initial-element nil iep) (initial-contents nil icp))
+  (let ((result (make-instance (class-of o))))
+    (cond
+      ((and iep icp)
+       (error "supplied both ~S and ~S to ~S" :initial-element :initial-contents 'make-sequence-like))
+      (icp (unless (= (length initial-contents) length)
+             (error "length mismatch in ~S" 'make-sequence-like))
+           (setf (cdr (%queue-data result)) (coerce initial-contents 'list)
+                 (%queue-pointer result) (last (%queue-data result))))
+      (t (setf (cdr (%queue-data result)) (make-list length :initial-element initial-element)
+               (%queue-pointer result) (last (%queue-data result)))))
+    result))
+(defmethod sequence:adjust-sequence ((o queue) length &key initial-element (initial-contents nil icp))
+  (cond
+    ((= length 0)
+     (setf (cdr (%queue-data o)) nil (%queue-pointer o) (%queue-data o)))
+    (t (sequence:adjust-sequence (%queue-data o) (1+ length) :initial-element initial-element)
+       (setf (%queue-pointer o) (last (%queue-data o)))
+       (when icp (replace (%queue-data o) initial-contents :start1 1)) o)))
+(defmethod sequence:make-simple-sequence-iterator ((q queue) &rest args &key from-end start end)
+  (declare (ignore from-end start end))
+  (apply #'sequence:make-simple-sequence-iterator (cdr (%queue-data q)) args))
+(defmethod sequence:iterator-step ((q queue) iterator from-end)
+  (sequence:iterator-step (cdr (%queue-data q)) iterator from-end))
+(defmethod sequence:iterator-endp ((q queue) iterator limit from-end)
+  (sequence:iterator-endp (cdr (%queue-data q)) iterator limit from-end))
+(defmethod sequence:iterator-element ((q queue) iterator)
+  (sequence:iterator-element (cdr (%queue-data q)) iterator))
+(defmethod (setf sequence:iterator-element) (new-value (q queue) iterator)
+  (setf (sequence:iterator-element (cdr (%queue-data q)) iterator) new-value))
+(defmethod sequence:iterator-index ((q queue) iterator)
+  (sequence:iterator-index (cdr (%queue-data q)) iterator))
+(defmethod sequence:iterator-copy ((q queue) iterator)
+  (sequence:iterator-copy (cdr (%queue-data q)) iterator))
+
+(with-test (:name (:ilc2007 :fig4a))
+  (assert (= (length (coerce '(1 2 3 4) 'queue)) 4)))
+(with-test (:name (:ilc2007 :fig4b))
+  (assert (= (count 1 (coerce '(1 2 3) 'queue)) 1)))
+(with-test (:name (:ilc2007 :fig4c))
+  (let ((result (remove-if-not #'oddp (coerce '(1 2 3) 'funcallable-queue))))
+    (assert (typep result 'funcallable-queue))
+    (assert (eql (type-of result) 'funcallable-queue))
+    (assert (= (length result) 2))
+    (assert (= (funcall result) 1))
+    (assert (= (funcall result) 3))
+    (assert (= (length result) 0))))
+(with-test (:name (:ilc2007 :fig4d))
+  (let ((result (remove-duplicates (coerce '(1 2 3 4 5) 'queue) :end 4
+                                   :key #'oddp :from-end t)))
+    (assert (typep result 'queue))
+    (assert (eql (type-of result) 'queue))
+    (assert (= (length result) 3))
+    (assert (equal (coerce result 'list) '(1 2 5)))))
